# Odd

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Configure.bat  OddProject.lua  OddProject.yaml
Even/Src/: CMakeLists.txt
Even/Src/Private/: Even.cpp
Even/Src/Private/Main/: Main.cpp  Main.h
Odd/CMake/: Odd.cmake
Odd/Config/: CMakeLists.txt  MainWindow.yaml  Odd.yaml  RHI.yaml
Odd/Src/: CMakeLists.txt
Odd/Src/Core/: CMakeLists.txt
Odd/Src/Core/LuaCore/: CMakeLists.txt
Odd/Src/Core/LuaCore/Private/: LuaRuntime.cpp  LuaState.cpp  LuaState.h
Odd/Src/Core/LuaCore/Public/: LuaRuntime.h
Odd/Src/Core/OddConfig/: CMakeLists.txt
Odd/Src/Core/OddConfig/Private/: OddConfig.cpp
Odd/Src/Core/OddConfig/Public/: OddConfig.h
Odd/Src/Core/OddCore/: CMakeLists.txt
Odd/Src/Core/OddCore/Private/: Logging.cpp  OddConfig.cpp  OddCore.cpp  OddMalloc.cpp  OddWaysToCrash.cpp
Odd/Src/Core/OddCore/Public/: Helpers.h  Logging.h  Macros.h  OddConfig.h  OddCore.h  OddMalloc.h  OddWaysToCrash.h  PlatformMacros.h  Types.h
Odd/Src/Core/OddLuaCore/: CMakeLists.txt
Odd/Src/Core/OddLuaCore/Private/: LuaRef.cpp  LuaRuntime.cpp  LuaStackGuard.cpp  LuaState.cpp  LuaState.h  LuaTable.cpp  OddLua.h
Odd/Src/Core/OddLuaCore/Public/: LuaFwd.h  LuaRef.h  LuaRuntime.h  LuaStackGuard.h  LuaTable.h
Odd/Src/Core/OddRootObj/: CMakeLists.txt
Odd/Src/Core/OddRootObj/Private/: RootObj.cpp  RootObjRegistry.cpp  RootObjRegistry.h
Odd/Src/Core/OddRootObj/Public/: ObjPtr.h  RootObj.h  RootObjMacros.h  WeakObjPtr.h
Odd/Src/Core/RootObj/: CMakeLists.txt
Odd/Src/Core/RootObj/Private/: RootObj.cpp  RootObjRegistry.cpp  RootObjRegistry.h  WeakObjPtr.cpp
Odd/Src/Core/RootObj/Public/: RootObj.h
Odd/Src/Main/: CMakeLists.txt
Odd/Src/Main/OddEntryPoint/: CMakeLists.txt
Odd/Src/Main/OddEntryPoint/Private/: OddEntryPoint.cpp
Odd/Src/Main/OddEntryPoint/Public/: OddEntryPoint.h
Odd/Src/Main/OddPlatform/: CMakeLists.txt
Odd/Src/Main/OddPlatform/Core/: CMakeLists.txt
Odd/Src/Main/OddPlatform/SDL/: CMakeLists.txt
Odd/Src/Main/OddPlatform/Windows/: CMakeLists.txt
Odd/Src/Main/OddRHI/: CMakeLists.txt
Odd/Src/Main/OddRHI/Core/: CMakeLists.txt
Odd/Src/Main/OddRHI/D3D12/: CMakeLists.txt
Odd/Src/Main/OddRHI/D3D12/Private/: D3D12CommandContext.cpp  D3D12CommandContext.h  D3D12CommandQueue.cpp  D3D12CommandQueue.h  D3D12Device.cpp  D3D12Device.h  D3D12DeviceManager.cpp  D3D12Resources.cpp  D3D12Resources.h  D3D12SwapChain.cpp  D3D12SwapChain.h  D3D12Types.cpp  D3D12Types.h  OddD3D12.h
Odd/Src/Main/OddRHI/D3D12/Public/: D3D12DeviceManager.h
(+50 files in other folders)
